--- a/client/src/styles/home.css
+++ b/client/src/styles/home.css
@@ -428,6 +428,13 @@ img {
     flex-direction: column;
 }
 
+.card_name-dating {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    column-gap: 6px;
+}
+
 .card_name a:hover {
     text-decoration: none;
 }
