--- a/client/src/styles/status_modal.css
+++ b/client/src/styles/status_modal.css
@@ -31,7 +31,7 @@
     border-radius: 15px;
     padding: 25px 25px 0px 25px;
     box-shadow: 0px 10px 15px rgba(0,0,0,0.1);
-    /* position: relative; */
+    position: relative;
 }
 .status_header{
     display: flex;
